--- a/examples/gatsby/package.json
+++ b/examples/gatsby/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/pedronauck/docz.git"
   },
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "gatsby develop --port 3000",
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
